Bug 277902 - Find should scroll the sheet to make the find result visible.
Summary: Find should scroll the sheet to make the find result visible.
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: usability (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-16 17:53 UTC by Lasse Liehu
Modified: 2011-07-30 15:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2011-07-16 17:53:59 UTC
Version:           2.4-snapshots (using Devel) 
OS:                Linux

Version 2.4 Alpha 3

Reproducible: Always

Steps to Reproduce:
1. Make a new blank worksheet
2. Insert for example "foobar" to cell A100.
3. Scroll back up
4. Ctrl+F, "foobar", Find

Actual Results:  
"foobar" in A100 is found and selected, but the sheet isn't scrolled so that the user can see it.

Expected Results:  
The sheet should scroll so that A100 is visible.
Comment 1 Tomas Mecir 2011-07-30 15:34:53 UTC
Git commit 676cd60c1bf2a689fd4cd4ed461fdf70f1a8ee23 by Tomas Mecir.
Committed on 30/07/2011 at 16:53.
Pushed by mecir into branch 'master'.

Find dialog: correctly scroll to the found cell

BUG: 277902

M  +7    -0    tables/ui/CellToolBase.cpp

http://commits.kde.org/calligra/676cd60c1bf2a689fd4cd4ed461fdf70f1a8ee23