Find dialog: correctly scroll to the found cell

BUG: 277902